--- a/movie-booking-project-backend/package.json
+++ b/movie-booking-project-backend/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon --experimental-modules --es-module-specifier-resolution=node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Shubham Chouksey",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
